Fix container to hide overflow and delay hamburger transition animation

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,19 @@
 .app {
   height: 100vh;
-  width: 100vw;
+  max-width: 100vw;
+  overflow: hidden;
   background-color: white;
   transition: ease 1s;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.hide-overflow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .app-dark {
