--- a/src/frontend/components/Background/Background.css
+++ b/src/frontend/components/Background/Background.css
@@ -1,5 +1,5 @@
 .background {
-    height: 80vh;
+    height: 70vh;
     background-image: url('../../assets/images/background.jpg');
     background-attachment: fixed;
     background-position: right;
