--- a/src/frontend/components/MobileMenu/MobileMenu.css
+++ b/src/frontend/components/MobileMenu/MobileMenu.css
@@ -1,6 +1,7 @@
 .menu {
     position: absolute;
     top: 0;
+    left: 0;
     text-align: center;
     background-color: white;
     height: 100vh;
